--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../../public/coolbackgrounds-gradient-kale.png);
+  background-image: url(../../public/images/todo.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
