fixed all issues and changed photo

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../../public/images/todo.jpg);
+  background-image: url(../../public/images/done.jfif);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
